[gd_scene load_steps=5 format=2]

[ext_resource path="res://Imagens/Status.png" type="Texture" id=1]
[ext_resource path="res://Imagens/fundo preto.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Status.gd" type="Script" id=3]
[ext_resource path="res://assets/tela_quintal.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="TelaQuintal" type="Sprite" parent="."]
position = Vector2( 639.75, 359.75 )
scale = Vector2( 0.676686, 0.838618 )
texture = ExtResource( 4 )

[node name="FundoPreto" type="Sprite" parent="."]
position = Vector2( 640, 361 )
scale = Vector2( 2.025, 2.05 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Status" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.26246, 0.26997 )
texture = ExtResource( 1 )

[node name="Button_saúde" type="Button" parent="."]
show_behind_parent = true
margin_left = 605.0
margin_top = 429.0
margin_right = 685.0
margin_bottom = 513.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_felicidade" type="Button" parent="."]
show_behind_parent = true
margin_left = 598.0
margin_top = 164.0
margin_right = 693.0
margin_bottom = 251.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_Conhecimento" type="Button" parent="."]
show_behind_parent = true
margin_left = 601.0
margin_top = 292.0
margin_right = 689.0
margin_bottom = 380.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_voltar_status" type="Button" parent="."]
show_behind_parent = true
margin_left = 601.0
margin_top = 536.0
margin_right = 688.0
margin_bottom = 568.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button_saúde" to="." method="_on_Button_sade_pressed"]
[connection signal="pressed" from="Button_felicidade" to="." method="_on_Button_felicidade_pressed"]
[connection signal="pressed" from="Button_Conhecimento" to="." method="_on_Button_Conhecimento_pressed"]
[connection signal="pressed" from="Button_voltar_status" to="." method="_on_Button_voltar_status_pressed"]
